--- a/1/style/style1.css
+++ b/1/style/style1.css
@@ -8,7 +8,7 @@ html, body {
 }
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #e8f0f0;
     display: flex;
     align-items: center;
