--- a/2/style/style.css
+++ b/2/style/style.css
@@ -17,7 +17,7 @@ body {
 }
 .display-window {
     width: 100vw;
-    padding: 50px;
+    padding: 100px 120px;
 }
 .title {
     font-size: 35px;
@@ -29,9 +29,35 @@ body {
 }
 .desserts {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+}
+.dessert {
+    display: flex;
+    flex-direction: column;
+    justify-content: center
+}
+.image-area {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: -10px;
+    width: 100%;
+    height: 300px;
+    border-radius: 15px;
 }
 .image-area img {
     width: 100%;
     height: 100%;
+    border-radius: 15px;
+}
+.add-to-cart {
+    position: absolute;
+    padding: 15px 30px;
+    z-index: 10;
+    left: 50%;
+    bottom: -20px;
+    transform: translateX(-50%);
+    border-radius: 50px;
+    border: 1px solid #B0ABA8;
 }
