--- a/2/style/style.css
+++ b/2/style/style.css
@@ -36,15 +36,17 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 .image-area {
     display: flex;
     flex-direction: column;
     position: relative;
-    gap: -10px;
-    width: 100%;
+    width: 300px;
     height: 300px;
     border-radius: 15px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .image-area img {
     width: 100%;
@@ -56,9 +58,9 @@ body {
     padding: 15px 30px;
     z-index: 10;
     left: 50%;
-    bottom: -20px;
-    transform: translateX(-50%);
+    bottom: 0;
     border: 1px solid #B0ABA8;
     border-radius: 50px;
     background-color: #FFFEFF;
+    transform: translate(-50%, 50%);
 }
