--- a/2/style/style.css
+++ b/2/style/style.css
@@ -42,7 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 300px;
+    width: 100%;
     height: 300px;
     border-radius: 15px;
     left: 50%;
@@ -63,4 +63,5 @@ body {
     border-radius: 50px;
     background-color: #FFFEFF;
     transform: translate(-50%, 50%);
+    cursor: pointer;
 }
