--- a/3/A3/style.css
+++ b/3/A3/style.css
@@ -1,3 +1,4 @@
+html{transition: background-color 0.5s;}
 [type="checkbox"] {
     appearance: none;
     position: relative;
@@ -27,6 +28,7 @@
     transform: translate(-50%, -50%);
     padding: 10px 20px;
     background-color: lightgray;
+    transition: background-color 0.5s;
 }
 [type="checkbox"]:checked {
     background-color: inherit;
