--- a/3/A3/style.css
+++ b/3/A3/style.css
@@ -25,13 +25,11 @@ html{transition: background-color 0.5s;}
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
     padding: 10px 20px;
+    border-radius: 15px;
     background-color: lightgray;
+    transform: translate(-50%, -50%);
     transition: background-color 0.5s;
-}
-[type="checkbox"]:checked {
-    background-color: inherit;
 }
 [type="checkbox"]:checked::before {
     background-color: yellow;
