--- a/3/A5/style.css
+++ b/3/A5/style.css
@@ -11,7 +11,8 @@ body {
     align-items: center;
     background-color: rgb(252, 252, 252);
 }
+
 .notice {
     display: flex;
-    
+    justify-content: space-between;
 }
