--- a/3/A5/style.css
+++ b/3/A5/style.css
@@ -12,13 +12,40 @@ body {
     background-color: rgb(252, 252, 252);
 }
 
-.notice-header {
+.notice-table {
     display: flex;
-
+    flex-direction: column;
+    align-items: center;
+    width: 700px;
+    background-color: #fff;
+    border: 1px solid #e2e2e2;
+    border-radius: 15px;
 }
 
 .notice {
+    padding: 15px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+}
+
+.notice-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.notice-classification {
+    padding: 5px 20px;
+    color: #fff;
+    border-radius: 2em;
+}
+
+.imp {
+    background-color: red;
+}
+
+.inf {
+    background-color: blue;
 }
