--- a/1/style/style1.css
+++ b/1/style/style1.css
@@ -202,6 +202,9 @@ input[type="radio"]:checked + label {
     cursor: pointer;
     color: #fff;
 }
+.addButton1 {
+    display: none;
+}
 .profile {
     width: 45px;
     height: 45px;
@@ -351,5 +354,19 @@ a {
         font-size: 1em;
         border: inherit;
         border-radius: inherit;
+    }
+    .addButton {
+        display: none;
+    }
+    .addButton1 {    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 12px 20px;
+        border-radius: 10px;
+        background-color: #004747;
+        font-size: 16px;
+        cursor: pointer;
+        color: #fff;
     }
 }
