--- a/3/A6/style.css
+++ b/3/A6/style.css
@@ -15,5 +15,6 @@ footer {
 }
 
 footer>.top-footer {
-    border: 1px solid #e2e2e2;
+    height: 350px;
+    border-bottom: 0.2px solid #e2e2e2;
 }
