--- a/3/A6/style.css
+++ b/3/A6/style.css
@@ -15,6 +15,8 @@ footer {
 }
 
 footer>.top-footer {
+    display: flex;
+    flex-direction: column;
     height: 350px;
     border-bottom: 0.2px solid #e2e2e2;
 }
