--- a/3/A6/style.css
+++ b/3/A6/style.css
@@ -22,16 +22,19 @@ footer {
 footer>.top-footer {
     display: flex;
     flex-direction: column;
+    width: 100%;
     height: 350px;
     border-bottom: 0.2px solid #e2e2e2;
-    padding: 60px 10px;
+    padding: 60px 20px;
 }
 
 footer>.bot-footer {
     display: flex;
-    flex-direction: space-between;
-    height: calc(500px - 350);
+    justify-content: space-between;
+    width: 100%;
+    height: calc(500px - 350px);
     align-items: center;
+    padding: 0 20px;
 }
 
 .title {
@@ -42,4 +45,13 @@ footer>.bot-footer {
 
 .subscription {
     color: #fff;
+    padding: 20px 0;
+}
+
+.bot-left {
+    color: #fff;
+}
+
+.bot-right {
+    color: rgb(180, 180, 180)
 }
