--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -1,7 +1,7 @@
 /*
 display: flex; = fd
 gap: 10px; = g10
-fld = flex-direction
+fxd = flex-direction
 jc = justify-content
     jcc = justify-content: center;
     jcsb = justify-content: space-between;
