--- a/3/A7/style.css
+++ b/3/A7/style.css
@@ -10,10 +10,17 @@ body {
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .title {
     font-weight: 800;
     font-size: 28px;
+}
+
+.services {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 300px;
 }
