--- a/3/A7/style.css
+++ b/3/A7/style.css
@@ -9,9 +9,21 @@ body {
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.service-contents {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: lightgray;
+    padding: 20px 0;
 }
 
 .title {
@@ -22,5 +34,18 @@ body {
 .services {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px;
+    grid-auto-rows: 250px;
+    gap: 20px;
+}
+
+.service {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px #888888;
+    padding: 20px;
 }
