--- a/3/A7/style.css
+++ b/3/A7/style.css
@@ -49,3 +49,11 @@ p {
     box-shadow: 2px 2px 2px #888888;
     padding: 20px;
 }
+.service-icon {
+    font-size: 40px;
+    padding: 10px 0;
+}
+.service-title {
+    font-weight: 700;
+    font-size: 24px;
+}
