--- a/3/A7/style.css
+++ b/3/A7/style.css
@@ -34,12 +34,12 @@ p {
 .services {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 250px;
+    grid-auto-rows: 275px;
     gap: 20px;
 }
 
 .service {
-    width: 350px;
+    width: 425px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,11 +49,25 @@ p {
     box-shadow: 2px 2px 2px #888888;
     padding: 20px;
 }
+
 .service-icon {
     font-size: 40px;
-    padding: 10px 0;
 }
+
 .service-title {
     font-weight: 700;
     font-size: 24px;
+    padding: 10px 0;
+}
+
+.service-sub {
+    text-align: center;
+}
+
+.service-button {
+    padding: 8px 20px;
+    margin-top: 20px;
+    border-radius: 3em;
+    background-color: #0577FC;
+    color: #fff;
 }
