--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -1,4 +1,6 @@
 /*
+box-sizing: border-box; = bx
+box-shadow: 1px 1px 5px #b9b9b9; = bxsh1:1:5:#b9b9b9
 display: flex; = df
 gap: 10px; = g10
 fxd = flex-direction
