--- a/3/A8/style.css
+++ b/3/A8/style.css
@@ -3,3 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: #fdfdfd;
+    padding: 20px;
+}
+
+.cart-contents {
+    width: 700px;
+    align-self: center;
+    justify-self: center;
+    border: 1px solid #e2e2e2;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.cart-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background-color: #000;
+    font-weight: 500;
+    font-size: 27px;
+    padding: 15px 0;
+}
+.cart-content {
+    padding: 18px;
+}
