--- a/3/A8/style.css
+++ b/3/A8/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .cart-contents {
-    width: 700px;
+    width: 800px;
     align-self: center;
     justify-self: center;
     border: 1px solid #e2e2e2;
@@ -28,6 +28,30 @@ body {
     font-size: 27px;
     padding: 15px 0;
 }
+
 .cart-content {
-    padding: 18px;
+    padding: 20px;
+}
+
+.cart-content-header {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.cart-content-header>img {
+    width: 90px;
+    height: 90px;
+    border-radius: 10px;
+}
+
+.cart-content-title {
+    font-weight: 600;
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+.cart-content-sub {
+    line-height: 1.5em;
+    color: #7c7c7c;
 }
