--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -19,4 +19,7 @@ font-size: 24px; = fz24
 text-align: center; = tac
 margin: 10px; = m10
     margin-top: 10px; = mt10
+    margin-right: 10px; = mr10
+    margin-bottom: 10px; = mb10
+    margin-left: 10px; = ml10
 */
