--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -12,6 +12,7 @@ ai = align-items: center;
     ""
 background-color: #fff = bc #fdfdfd
 border: 1px solid #e2e2e2; = bd:1:solid:#e2e2e2
+    border-bottom: 1px solid #e2e2e2; = bdb:1:s:#e2e2
 border-radius: 15px; = brs15
 color: rgb(a, b, c) = crabc
 font-weight: 500 = fw500
