--- a/3/A8/style.css
+++ b/3/A8/style.css
@@ -91,4 +91,6 @@ span.pm {
     padding: 5px 12px;
     border-radius: 50%;
     background-color: red;
+    padding-top: 2px;
+    padding-bottom: 6px;
 }
