--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -11,7 +11,7 @@ jc = justify-content
 ai = align-items: center;
     ""
     ""
-background-color: #fff = bc #fdfdfd
+background-color: #fff = bc #fdfdfd #efefef
 border: 1px solid #e2e2e2; = bd:1:solid:#e2e2e2
     border-bottom: 1px solid #e2e2e2; = bdb:1:s:#e2e2
 border-radius: 15px; = brs15
