--- a/3/A9/style.css
+++ b/3/A9/style.css
@@ -2,16 +2,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    z-index: 5;
 }
 
 body {
     width: 100vw;
     height: 100vh;
+    position: relative;
 }
 
 .bg {
     width: inherit;
     height: inherit;
     position: fixed;
-    
+    z-index: 0;
+}
+
+label[for="left"] {
+    position: absolute;
+    top: 92%;
+    left: 47%;
+    color: #fff;
+    padding: 12px 18px;
+    border: 1px solid #fff;
+}
+
+label[for="right"] {
+    position: absolute;
+    top: 92%;
+    right: 47%;
+    color: #fff;
+    padding: 12px 18px;
+    border: 1px solid #fff;
 }
