--- a/3/A9/style.css
+++ b/3/A9/style.css
@@ -8,13 +8,16 @@ body {
     width: 100vw;
     height: 100vh;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bg {
     width: inherit;
     height: inherit;
     position: fixed;
-    z-index: 0;
+    z-index: -1;
 }
 
 *[class^="left"] {
@@ -28,7 +31,7 @@ body {
     width: 50px;
     height: 50px;
     border: 1px solid #fff;
-    
+
 }
 
 *[class^="right"] {
@@ -37,7 +40,7 @@ body {
     justify-content: center;
     align-items: center;
     top: 92%;
-    right: 47%;
+    left: 53%;
     width: 50px;
     height: 50px;
     color: #fff;
@@ -60,6 +63,7 @@ input:checked+label {
 .third {
     z-index: 1;
 }
+
 div.third {
     z-index: 0;
 }
@@ -75,13 +79,37 @@ div.third {
 .gr {
     background-color: green;
 }
+
 .gallery-contents {
     display: flex;
     align-items: center;
     width: 1600px;
+    overflow: hidden;
 }
+
 .gallery-content {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 100px;
+    width: 1600px;
+    flex-shrink: 0;
+}
+
+.content>img {
+    width: 100%;
+}
+
+.gallery-content>.content:nth-of-type(3)>img {
+    width: 70%;
+}
+
+input[id="lr3"]:checked~.gallery-contents>.gallery-content:nth-of-type(1),
+input[id="lr3"]:checked~.gallery-contents>.gallery-content:nth-of-type(2) {
+    width: 0px;
+}
+input[id="lr4"]:checked~.gallery-contents>.gallery-content:nth-of-type(1) {
+    width: 0px;
+}
+input[id="lr2"]:checked~.gallery-contents>.gallery-content:nth-of-type(1) {
     width: 1600px;
 }
