--- a/3/A9/style.css
+++ b/3/A9/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
 }
 
 body {
@@ -64,26 +65,6 @@ input:checked+label {
     z-index: 1;
 }
 
-div.third {
-    z-index: 0;
-}
-
-.red {
-    background-color: red;
-}
-
-.blue {
-    background-color: blue;
-}
-
-.purple {
-    background-color: purple;
-}
-
-.gr {
-    background-color: green;
-}
-
 .gallery-contents {
     display: flex;
     align-items: center;
@@ -136,4 +117,7 @@ label:active {
 
 .third:active {
     background-color: rgb(255, 255, 255, 0.3);
+}
+p.title {
+    margin-top: 20px;
 }
