--- a/3/A9/style.css
+++ b/3/A9/style.css
@@ -22,28 +22,28 @@ body {
 }
 
 *[class^="left"] {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     top: 92%;
     left: 47%;
     color: #fff;
-    width: 50px;
-    height: 50px;
+    width: 3em;
+    height: 3em;
     border: 1px solid #fff;
 
 }
 
 *[class^="right"] {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     top: 92%;
     left: 53%;
-    width: 50px;
-    height: 50px;
+    width: 3em;
+    height: 3em;
     color: #fff;
     padding: 12px 18px;
     border: 1px solid #fff;
@@ -118,6 +118,12 @@ label:active {
 .third:active {
     background-color: rgb(255, 255, 255, 0.3);
 }
+
 p.title {
     margin-top: 20px;
+}
+
+.arrow {
+    width: 20px;
+    height: 35px;
 }
