--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -18,6 +18,7 @@ border: 1px solid #e2e2e2; = bd:1:solid:#e2e2e2
     border-bottom: 1px solid #e2e2e2; = bdb:1:s:#e2e2
 border-radius: 15px; = brs15
 color: rgb(a, b, c) = crabc
+#c2c2c2
 font-weight: 500 = fw500
 font-size: 24px; = fz24
 text-align: center; = tac
