--- a/Others/css_shortcuts.css
+++ b/Others/css_shortcuts.css
@@ -22,6 +22,7 @@ color: rgb(a, b, c) = crabc
 font-weight: 500 = fw500
 font-size: 24px; = fz24
 text-align: center; = tac
+text-decoration: none; = td
 margin: 10px; = m10
     margin-top: 10px; = mt10
     margin-right: 10px; = mr10
