--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -161,7 +161,7 @@ input:checked~label:first-of-type {
     background-color: #fff;
 }
 
-input:checked~div {
+input:checked~.toggle-display {
     display: flex;
 }
 
@@ -169,16 +169,16 @@ input:checked~div {
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
-    gap: 30px;
-    margin-top: 30px;
     border-radius: 15px;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .slide-content {
     display: flex;
     flex-shrink: 0;
     width: 1280px;
-    height: 700px;
+    height: 520px;
     border-radius: 15px;
     background-color: #000;
 }
