--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -272,7 +272,28 @@ input[name="y-category"]:checked+label {
 ul:has(input[id="y1"]:checked)~#yeot1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
+    grid-auto-rows: 455px;
+    gap: 30px;
+}
+
+ul:has(input[id="y2"]:checked)~#yeot2 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 455px;
+    gap: 30px;
+}
+
+ul:has(input[id="y3"]:checked)~#yeot3 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 455px;
+    gap: 30px;
+}
+
+ul:has(input[id="y4"]:checked)~#yeot4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 455px;
     gap: 30px;
 }
 
