--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -241,7 +241,7 @@ input:checked~.toggle-display {
 }
 
 .yeotbogi {
-    margin-top: calc(50px);
+    margin-top: calc(70px);
 }
 
 .yeotbogi-title {
@@ -273,28 +273,28 @@ ul:has(input[id="y1"]:checked)~#yeot1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
-    gap: 30px;
+    gap: 28px;
 }
 
 ul:has(input[id="y2"]:checked)~#yeot2 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
-    gap: 30px;
+    gap: 28px;
 }
 
 ul:has(input[id="y3"]:checked)~#yeot3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
-    gap: 30px;
+    gap: 28px;
 }
 
 ul:has(input[id="y4"]:checked)~#yeot4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
-    gap: 30px;
+    gap: 28px;
 }
 
 .yeotbogi-content>img {
@@ -305,19 +305,19 @@ ul:has(input[id="y4"]:checked)~#yeot4 {
 
 .content-company {
     font-size: 14px;
-    margin-top: 20px;
+    margin-top: 12px;
     color: rgb(0, 0, 0, 0.4)
 }
 
 .content-name {
     margin-top: 10px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .content-event {
     margin-top: 5px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 19px;
     color: #2e36a7;
 }
 
@@ -352,4 +352,28 @@ ul:has(input[id="y4"]:checked)~#yeot4 {
 .new {
     color: #00b;
     background-color: rgb(0, 0, 255, 0.1);
+}
+
+.AD-content-area {
+    width: 100%;
+    height: 170px;
+    background-color: #000;
+    margin-top: 120px;
+    border-radius: 10px;
+}
+
+.new-contents-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 120px;
+}
+
+.new-contents-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-right: 20px;
 }
