--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -354,11 +354,16 @@ ul:has(input[id="y4"]:checked)~#yeot4 {
     background-color: rgb(0, 0, 255, 0.1);
 }
 
-.AD-content-area {
+.AD-contents-area {
     width: 100%;
     height: 170px;
-    background-color: #000;
     margin-top: 120px;
+}
+
+.AD-content {
+    width: inherit;
+    height: inherit;
+    background-color: rgb(0, 0, 0, 0.2);
     border-radius: 10px;
 }
 
@@ -376,4 +381,30 @@ ul:has(input[id="y4"]:checked)~#yeot4 {
     justify-content: space-between;
     width: 100%;
     padding-right: 20px;
+}
+
+.new-contents-title {
+    font-weight: 600;
+    font-size: 27px;
+}
+
+.view-all {
+    color: #00000060;
+}
+
+.new-contents {
+    display: flex;
+
+    width: inherit;
+    margin-top: 40px;
+    overflow: hidden;
+}
+
+.new-content {
+    width: calc((100% - 28px * 2) / 3);
+    flex-shrink: 0;
+    margin-right: 28px;
+    height: 600px;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0, 0.2);
 }
