--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    --new-content-width: calc((var(--visual-width) - 28px * 2) / 3);
+    --visual-width: 1280px;
+}
+
 html,
 body {
     width: 100vw;
@@ -15,7 +20,7 @@ a {
 }
 
 .visual-container {
-    width: 1280px;
+    width: var(--visual-width);
     /*height: 4000px;*/
     margin: 0 auto;
 }
@@ -269,35 +274,36 @@ input[name="y-category"]:checked+label {
     margin-top: 20px;
 }
 
-ul:has(input[id="y1"]:checked)~#yeot1 {
+ul:has(input[id="y1"]:checked)~.yeot1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
     gap: 28px;
 }
 
-ul:has(input[id="y2"]:checked)~#yeot2 {
+ul:has(input[id="y2"]:checked)~.yeot2 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
     gap: 28px;
 }
 
-ul:has(input[id="y3"]:checked)~#yeot3 {
+ul:has(input[id="y3"]:checked)~.yeot3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
     gap: 28px;
 }
 
-ul:has(input[id="y4"]:checked)~#yeot4 {
+ul:has(input[id="y4"]:checked)~.yeot4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 470px;
     gap: 28px;
 }
 
-.yeotbogi-content>img {
+.yeotbogi-content>img, 
+.best-content>img {
     width: 100%;
     aspect-ratio: 1/1;
     border: 1px solid #000;
@@ -395,25 +401,68 @@ ul:has(input[id="y4"]:checked)~#yeot4 {
 .new-contents {
     display: flex;
 
-    width: inherit;
+    width: var(--visual-width);
     margin-top: 40px;
     overflow: hidden;
+
 }
 
 .new-content {
-    width: calc((100% - 28px * 2) / 3);
+    width: var(--new-content-width);
     flex-shrink: 0;
     margin-right: 28px;
     height: 600px;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0, 0.2);
+    animation: Slide2 calc(4s*2);
+    animation-iteration-count: infinite;
 }
+
 @keyframes Slide2 {
-    0% {margin-left: 0;}
+    0% {
+        transform: translateX(calc((var(--new-content-width) + 28px)* 0))
+    }
+
+    46% {
+        transform: translateX(calc((var(--new-content-width) + 28px)* 0))
+    }
+
+    50% {
+        transform: translateX(calc((var(--new-content-width) + 28px)* -1))
+    }
+
+    96% {
+        transform: translateX(calc((var(--new-content-width) + 28px)* -1))
+    }
+
+    100% {
+        transform: translateX(calc((var(--new-content-width) + 28px)* 0))
+    }
 }
+
 /* img는 좀 더 손볼 필요 */
 .new-content>img {
     width: 100%;
     aspect-ratio: 1/1;
     border: 1px solid #000;
+}
+
+.best-contents {
+    display: grid;
+    width: var(--visual-width);
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 470px;
+    gap: 28px;
+    margin-top: 40px;
+}
+.best-content {
+    position: relative;
+}
+.best-content>.num {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    padding: 5px 12px;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #000;
 }
