--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -302,7 +302,7 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
     gap: 28px;
 }
 
-.yeotbogi-content>img, 
+.yeotbogi-content>img,
 .best-content>img {
     width: 100%;
     aspect-ratio: 1/1;
@@ -454,9 +454,11 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
     gap: 28px;
     margin-top: 40px;
 }
+
 .best-content {
     position: relative;
 }
+
 .best-content>.num {
     position: absolute;
     left: 10px;
@@ -465,4 +467,30 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
     border-radius: 10px;
     color: #fff;
     background-color: #000;
+}
+
+.recommend-contents-frame {
+    width: 100vw;
+    height: 450px;
+    margin-top: 120px;
+    margin-left: calc((100vw - var(--visual-width)) / -2);
+    padding-top: 80px;
+    padding-left: calc((100vw - var(--visual-width)) / 2);
+    background-color: rgb(89, 89, 255);
+}
+
+.recommend-subtitle,
+.recommend-title,
+.recommend-subscription {
+    color: #fff;
+}
+
+.recommend-title {
+    margin-top: 30px;
+    font-weight: 800;
+    font-size: 27px;
+}
+.recommend-subscription {
+    margin-top: 20px;
+    font-size: 12px;
 }
