--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -12,6 +12,8 @@
 html,
 body {
     width: 100vw;
+    scrollbar-gutter: stable;
+    overflow-y: scroll;
 }
 
 a {
@@ -303,7 +305,8 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
 }
 
 .yeotbogi-content>img,
-.best-content>img {
+.best-content>img,
+.sales-content>img {
     width: 100%;
     aspect-ratio: 1/1;
     border: 1px solid #000;
@@ -471,7 +474,7 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
 
 .recommend-contents-frame {
     width: 100vw;
-    height: 450px;
+    height: 435px;
     margin-top: 120px;
     margin-left: calc((100vw - var(--visual-width)) / -2);
     padding-top: 80px;
@@ -489,9 +492,64 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
     margin-top: 30px;
     font-weight: 800;
     font-size: 27px;
+    line-height: 1.2em;
 }
 
 .recommend-subscription {
     margin-top: 20px;
     font-size: 13px;
+}
+
+.recommend-contents-area {
+    position: relative;
+    height: inherit;
+}
+
+.recommend-contents {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 380px;
+    top: 50px;
+    height: inherit;
+    gap: 25px;
+    z-index: 5;
+}
+
+.recommend-content {
+    width: 280px;
+    height: inherit;
+}
+
+.recommend-content>img {
+    width: inherit;
+    height: 370px;
+    border-radius: 10px;
+    /*border: 1px solid #000*/
+    background-color: #000;
+}
+
+.recommend-content-title {
+    font-size: 16.5px;
+    font-weight: 600;
+    margin-top: 12px;
+}
+
+.recommend-content-subtitle {
+    font-size: 13px;
+    margin-top: 5px;
+    color: #929292;
+}
+
+.sales-contents-area {
+    margin-top: 250px;
+}
+
+.sales-contents {
+    display: grid;
+    width: var(--visual-width);
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 470px;
+    gap: 28px;
+    margin-top: 40px;
 }
