--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -595,7 +595,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px 0;
+    padding: 10px 0 40px 0;
 }
 
 footer>img {
@@ -607,7 +607,12 @@ footer>img {
 .footer-main {
     display: flex;
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 20px 0 5px 0;
+    font-size: 14px;
+}
+
+.footer-main {
+    margin: 0;
 }
 
 .footer-nav {
@@ -631,6 +636,16 @@ footer>img {
     justify-content: center;
 }
 
+.footer-main-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.footer-main [class^="footer-nav"] {
+    padding: 2px 0;
+}
 .footer-main [class^="footer-nav"]>li {
     padding: 0 0.5em;
 }
@@ -641,4 +656,20 @@ footer>img {
 
 .footer-nav>li:last-of-type {
     border-right: none;
+}
+
+.call-number {
+    font-size: 32px;
+    font-weight: 800;
+}
+
+.footer-main-right p[class$="-time"] {
+    font-size: 13px;
+    padding: 2px 0;
+    margin-top: 2px;
+}
+
+.copyright-text {
+    font-size: 12px;
+    color: #979797;
 }
