--- a/2주차 과제-2/style.css
+++ b/2주차 과제-2/style.css
@@ -366,7 +366,8 @@ ul:has(input[id="y4"]:checked)~.yeot4 {
 .AD-contents-area {
     width: 100%;
     height: 170px;
-    margin-top: 120px;
+    margin-top: 80px;
+    margin-bottom: 10px;
 }
 
 .AD-content {
